# fuegosite

./: .env  .fuego_map.db  .gitignore  CMakeLists.txt  CNAME  CODEBASE_MAPPER_README.md  COMMUNITY_SETUP.md  CoinPaprika_XFG_price_all_2025-06-05.csv  DECENTRALIZED_COMMUNITY.md  FUEGO_BLOCKCHAIN_SPECIALIST_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  RAG_README.md  README.md  SPECIALIST_AGENT_README.md  analyze_fuego_code.py  arm.cmake  browserconfig.xml  chart.html  claude_desktop_config.json  codebase_mapper.py  cold.html  community.html  dev  fuego_blockchain_specialist.py  fuego_specialist_config.json  hermes_conversation_20260420_024924.json  index.html  keybase.txt  mcp_server.py  package-lock.json  package.json  paradigm.html  rag_system.py  requirements.txt  robots.txt  simple_mapper.py  simple_rag.py  site.webmanifest  (+10 more)
fuego-prover/fuego-cn/: Cargo.toml
src/: BurnTransactionHandler.cpp  CMakeLists.txt  CryptoNoteConfig.h  EldernodeIndexManager.h  Makefile  version.h.in
src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h
src/BurnDepositValidationService/: BurnDepositValidationService.cpp  CMakeLists.txt
src/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  Base64.cpp  Base64.h  BinaryArray.hpp  BlockingQueue.cpp  BlockingQueue.h  CommandLine.cpp  CommandLine.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  DnsTools.cpp  DnsTools.h  FileMappedVector.cpp  FileMappedVector.h  FileSystem.h  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  JsonValue.cpp  JsonValue.h  Math.cpp  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  (+21 more)
src/ConnectivityTool/: ConnectivityTool.cpp
src/CryptoNoteCore/: Account.cpp  Account.h  AdaptiveDifficulty.cpp  AdaptiveDifficulty.h  AliasIndex.cpp  AliasIndex.h  BankingFee.cpp  BankingIndex.cpp  BankingIndex.h  BlockIndex.cpp  BlockIndex.h  Blockchain.cpp  Blockchain.h  BlockchainIndices.cpp  BlockchainIndices.h  BlockchainMessages.cpp  BlockchainMessages.h  BurnProofDataFileGenerator.cpp  BurnProofDataFileGenerator.h  Checkpoints.cpp  Checkpoints.h  CommitmentIndex.cpp  CommitmentIndex.h  Core.cpp  Core.h  CoreConfig.cpp  CoreConfig.h  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  CryptoNoteStatInfo.h  CryptoNoteTools.cpp  CryptoNoteTools.h  Currency.cpp  Currency.h  (+54 more)
src/CryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h  CryptoNoteProtocolHandlerCommon.h  ICryptoNoteProtocolObserver.h  ICryptoNoteProtocolQuery.h
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h
src/EldernodeIndexManager/: CMakeLists.txt  ElderfierDepositManager.cpp  ElderfierDepositManager.h  EldernodeIndexManager.cpp  EldernodeIndexUtils.cpp  EldernodeRandomSelector.cpp
src/FuegoI2P/: CMakeLists.txt  Makefile
src/FuegoMeshtastic/: CMakeLists.txt
src/FuegoTor/: CMakeLists.txt
src/HTTP/: HttpParser.cpp  HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
src/InProcessNode/: InProcessNode.cpp  InProcessNode.h  InProcessNodeErrors.cpp  InProcessNodeErrors.h
src/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
src/Logging/: CommonLogger.cpp  CommonLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.cpp  ILogger.h  LoggerGroup.cpp  LoggerGroup.h  LoggerManager.cpp  LoggerManager.h  LoggerMessage.cpp  LoggerMessage.h  LoggerRef.cpp  LoggerRef.h  StreamLogger.cpp  StreamLogger.h
src/Miner/: BlockchainMonitor.cpp  BlockchainMonitor.h  Miner.cpp  Miner.h  MinerEvent.h  MinerManager.cpp  MinerManager.h  MiningConfig.cpp  MiningConfig.h  main.cpp
src/NodeRpcProxy/: NodeErrors.cpp  NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h
src/P2p/: IP2pNodeInternal.cpp  IP2pNodeInternal.h  LevinProtocol.cpp  LevinProtocol.h  MultiTransportNode.cpp  MultiTransportNode.h  NetNode.cpp  NetNode.h  NetNodeCommon.h  NetNodeConfig.cpp  NetNodeConfig.h  P2pConnectionProxy.cpp  P2pConnectionProxy.h  P2pContext.cpp  P2pContext.h  P2pContextOwner.cpp  P2pContextOwner.h  P2pInterfaces.cpp  P2pInterfaces.h  P2pNetworks.h  P2pNode.cpp  P2pNode.h  P2pNodeConfig.cpp  P2pNodeConfig.h  P2pProtocolDefinitions.h  P2pProtocolTypes.h  PeerListManager.cpp  PeerListManager.h
src/PaymentGate/: NodeFactory.cpp  NodeFactory.h  PaymentServiceJsonRpcMessages.cpp  PaymentServiceJsonRpcMessages.h  PaymentServiceJsonRpcServer.cpp  PaymentServiceJsonRpcServer.h  StagedDepositRpc.cpp  StagedDepositRpc.h  WalletService.cpp  WalletService.cpp.backup  WalletService.h  WalletServiceErrorCategory.cpp  WalletServiceErrorCategory.h
src/PaymentGateService/: ConfigurationManager.cpp  ConfigurationManager.h  InteractiveWalletDaemon.cpp  InteractiveWalletDaemon.h  PaymentGateService.cpp  PaymentGateService.h  PaymentServiceConfiguration.cpp  PaymentServiceConfiguration.h  RpcNodeConfiguration.cpp  RpcNodeConfiguration.h  main.cpp
src/Rpc/: CoreRpcServerCommandsDefinitions.h  CoreRpcServerErrorCodes.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  JsonRpc.cpp  JsonRpc.h  RpcServer.cpp  RpcServer.h  RpcServerConfig.cpp  RpcServerConfig.h
src/Serialization/: BinaryInputStreamSerializer.cpp  BinaryInputStreamSerializer.h  BinaryOutputStreamSerializer.cpp  BinaryOutputStreamSerializer.h  BinarySerializationTools.h  ISerializer.h  IStream.h  JsonInputStreamSerializer.cpp  JsonInputStreamSerializer.h  JsonInputValueSerializer.cpp  (+13 more)
tests/: CMakeLists.txt  adaptor_test  adaptor_test.cpp  mlsag_test.cpp
tui-testnet/: CMakeLists.txt  README.md  build.sh  go.mod  main.go  main.go.clean
(+527 files in other folders)
